--- a/demo_project/index.html
+++ b/demo_project/index.html
@@ -14,6 +14,10 @@
   </header>
 
   <main class="content">
+    <section class="image-demo">
+      <img id="hero-image" class="demo-photo" src="https://via.placeholder.com/480x240.png?text=Demo+Image" alt="Demo photo">
+    </section>
+
     <section class="card-row">
       <article class="card">
         <h2>Card One</h2>
