feat(editor): add gradient background support and full typography management
- Added gradient background mode with linear-gradient support
- Enabled dynamic detection of gradient from computed styles
- Implemented Google Fonts runtime loader with duplicate protection
- Added runtimeFonts schema support in patch.json
- Created dedicated Typography section in style panel
- Moved font-size and font-weight into unified typography group
- Added font-family selector with system and loaded fonts
- Ensured persistence of gradient and font changes via override.css
- Performed internal code review and removed unused listeners

--- a/REL_EDITOR/editor/index.html
+++ b/REL_EDITOR/editor/index.html
@@ -51,6 +51,22 @@
         Animate.css
       </label>
     </div>
+    <div class="fonts-box">
+      <label>
+        Font Library
+        <select id="fontLibrarySelect">
+          <option value="none">None</option>
+          <option value="google">Google Fonts</option>
+          <option value="bunny">Bunny Fonts</option>
+          <option value="adobe-edge">Adobe Edge Fonts</option>
+        </select>
+      </label>
+      <div id="fontLibraryFamilyRow" class="font-library-row hidden">
+        <input id="fontLibraryFamilyInput" type="text" placeholder="Poppins">
+        <button id="addFontFamilyBtn" type="button">Add Font</button>
+      </div>
+      <div id="fontFamiliesList" class="font-families-list"></div>
+    </div>
     <div id="statusText" class="status">Ready</div>
   </header>
 
