fix(export): persist and export link attributes and text content overrides
- Persisted link attribute overrides (href/target/rel/title) in patch.json
- Added safe text content editing for simple text nodes
- Updated Export Safe to merge attribute and text overrides into REL_index.html using stable selectors
- Prevented default link values from overwriting user edits
- Added validation for URL formats and relative/mailto/tel links
- Improved warnings for missing or ambiguous selectors during export
- Performed internal code review and removed unused helpers

--- a/REL_EDITOR/editor/index.html
+++ b/REL_EDITOR/editor/index.html
@@ -250,6 +250,18 @@
         </label>
       </section>
 
+      <section id="textSettingsSection" class="inspector-section hidden">
+        <h3>Text</h3>
+        <div id="textComplexWarning" class="text-warning hidden"></div>
+        <label class="control-item control-item-stacked">
+          <span>Text Content</span>
+          <textarea id="textContentInput" rows="4" placeholder="Element text"></textarea>
+        </label>
+        <div class="text-actions">
+          <button id="applyTextBtn" type="button">Apply</button>
+        </div>
+      </section>
+
       <section id="imageSettingsSection" class="inspector-section hidden">
         <h3>Image Settings</h3>
         <label class="control-item">
