Fix Vite dev server startup by handling port conflicts and improving process lifecycle management

--- a/REL_EDITOR/editor/index.html
+++ b/REL_EDITOR/editor/index.html
@@ -34,6 +34,7 @@
         <button id="stopDevServerBtn" type="button">Stop Dev Server</button>
         <span id="viteStatusText" class="vite-status">Vite: stopped</span>
       </div>
+      <pre id="viteLogText" class="vite-log hidden"></pre>
       <button id="loadProjectBtn" type="button">Load Project</button>
       <button id="savePatchBtn" type="button">Save Patch</button>
       <button id="exportSafeBtn" type="button">Export Safe</button>
