--- a/REL_EDITOR/editor/index.html
+++ b/REL_EDITOR/editor/index.html
@@ -337,6 +337,8 @@
   </main>
   <div id="resizeOverlay" class="resize-overlay hidden" aria-hidden="true"></div>
 
+  <script src="./tooltips_registry.js"></script>
+  <script src="./tooltip_manager.js"></script>
   <script src="./editor_app.js"></script>
 </body>
 </html>
